 [package]
authors = ["M4tsuri <me@m4tsuri.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "An embedded-hal based driver for VFD displays from EEI Tech"
documentation = "https://docs.rs/eei_vfd"
homepage = "https://github.com/caemor/eei_vfd"
keywords = ["VFD", "Display"]
license = "ISC"
name = "eei_vfd"
readme = "README.md"
repository = "https://github.com/M4tsuri/eei_vfd"
version = "0.0.1"
edition = "2021"

[dependencies]
embedded-graphics-core = { version = "0.3.3", optional = true}
embedded-hal = {version = "0.2.7", features = ["unproven"]}

[dev-dependencies]
embedded-graphics = "0.7.1"

embedded-hal-mock = "0.8"

[target.'cfg(unix)'.dev-dependencies]
linux-embedded-hal = "0.3"

[features]
# Remove the linux-dev feature to build the tests on non  unix systems
default = ["graphics", "linux-dev"]

graphics = ["embedded-graphics-core"]
linux-dev = []

# Offers an alternative fast full lut for type_a displays, but the refreshed screen isnt as clean looking
type_a_alternative_faster_lut = []
